Update bazel files